--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ repository = "https://github.com/ThePuzzlemaker/task-list"
 keywords = ["tasks","todo"]
 categories = ["command-line-utilities"]
 readme = "README.md"
-version = "1.0.0"
+version = "1.0.1"
 authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
 edition = "2018"
 
@@ -15,3 +15,4 @@ edition = "2018"
 [dependencies]
 dirs = "2.0.2"
 pancurses = "0.16.1"
+clap = "2.33.0"
